# cw-receipt

./: Cargo.toml  README.md
examples/: schema.rs
schema/: cw-receipt.json
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  tests.rs
ts/: CwReceipt.client.ts  CwReceipt.message-composer.ts  CwReceipt.react-query.ts  CwReceipt.recoil.ts  CwReceipt.types.ts  index.ts
